<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android                   ="http://schemas.android.com/apk/res/android"
        xmlns:tools                     ="http://schemas.android.com/tools"
        android:layout_width            ="match_parent"
        android:layout_height           ="match_parent"
        xmlns:app                       ="http://schemas.android.com/apk/res-auto"
        tools:context                   =".UserDetailsActivity">
    
    <androidx.appcompat.widget.Toolbar
            android:id                              ="@+id/toolbarLayout"
            android:layout_width                    ="0dp"
            android:layout_height                   ="?attr/actionBarSize"
            android:background                      ="?attr/colorPrimary"
            android:theme                           ="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf      ="parent"
            app:layout_constraintRight_toRightOf    ="parent"
            app:layout_constraintTop_toTopOf        ="parent"/>
    
    <ScrollView
            android:layout_width                    ="0dp"
            android:layout_height                   ="0dp"
            app:layout_constraintTop_toBottomOf     ="@id/toolbarLayout"
            app:layout_constraintLeft_toLeftOf      ="parent"
            app:layout_constraintRight_toRightOf    ="parent"
            app:layout_constraintBottom_toBottomOf  ="parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content">
    
            <ImageView
                    android:id                              ="@+id/userImg"
                    android:layout_width                    ="100dp"
                    android:layout_height                   ="100dp"
                    android:layout_margin                   ="16dp"
                    android:contentDescription              ="@null"
                    app:layout_constraintLeft_toLeftOf      ="parent"
                    app:layout_constraintTop_toTopOf        ="parent"/>
            
            <TextView
                    android:id                              ="@+id/userLoginTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginStart              ="15dp"
                    android:textSize                        ="20sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintLeft_toRightOf     ="@id/userImg"
                    app:layout_constraintTop_toTopOf        ="@id/userImg"
                    app:layout_constraintBottom_toBottomOf  ="@id/userImg"/>
            
            <TextView
                    android:id                              ="@+id/nameLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:textSize                        ="16sp"
                    android:text                            ="@string/name_colons"
                    app:layout_constraintStart_toStartOf    ="@id/userImg"
                    app:layout_constraintTop_toBottomOf     ="@id/userImg"/>
            
            <TextView
                    android:id                              ="@+id/nameTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    android:layout_marginEnd                ="16dp"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/nameLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/emailLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/email_colons"
                    app:layout_constraintStart_toStartOf    ="@id/nameLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/nameLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/emailTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/emailLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/companyLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/company_colons"
                    app:layout_constraintStart_toStartOf    ="@id/emailLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/emailLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/companyTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/companyLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/followersLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/followers_colons"
                    app:layout_constraintStart_toStartOf    ="@id/companyLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/companyLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/followersTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/followersLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/blogLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/blog_colons"
                    app:layout_constraintStart_toStartOf    ="@id/followersLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/followersLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/blogTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/blogLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/locationLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/location_colons"
                    app:layout_constraintStart_toStartOf    ="@id/blogLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/blogLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/locationTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/locationLabelTxt"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>