<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android                   ="http://schemas.android.com/apk/res/android"
        xmlns:tools                     ="http://schemas.android.com/tools"
        android:layout_width            ="match_parent"
        android:layout_height           ="match_parent"
        xmlns:app                       ="http://schemas.android.com/apk/res-auto"
        tools:context                   =".fragments.UserDetailsFragment">
    
    <ScrollView
            android:layout_width                    ="0dp"
            android:layout_height                   ="0dp"
            app:layout_constraintLeft_toLeftOf      ="parent"
            app:layout_constraintRight_toRightOf    ="parent"
            app:layout_constraintBottom_toBottomOf  ="parent"
            app:layout_constraintTop_toTopOf        ="parent"
            tools:ignore                            ="UselessParent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id              ="@+id/share_layout"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content">
            
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id                          ="@+id/user_login_layout"
                    android:layout_width                ="match_parent"
                    android:layout_height               ="wrap_content"
                    android:layout_margin               ="16dp"
                    app:layout_constraintTop_toTopOf    ="parent"
                    app:layout_constraintLeft_toLeftOf  ="parent">
            
                <ImageView
                        android:id                              ="@+id/userImg"
                        android:layout_width                    ="100dp"
                        android:layout_height                   ="100dp"
                        android:contentDescription              ="@null"
                        app:layout_constraintLeft_toLeftOf      ="parent"
                        app:layout_constraintTop_toTopOf        ="parent"
                        android:transitionName                  ="user_image"
                        android:src                             ="@mipmap/ic_launcher_round"/>
            
                <TextView
                        android:id                              ="@+id/userLoginTxt"
                        android:layout_width                    ="wrap_content"
                        android:layout_height                   ="wrap_content"
                        android:layout_marginStart              ="15dp"
                        android:textSize                        ="20sp"
                        android:textStyle                       ="bold"
                        android:transitionName                  ="user_login"
                        app:layout_constraintLeft_toRightOf     ="@id/userImg"
                        app:layout_constraintTop_toTopOf        ="@id/userImg"
                        app:layout_constraintBottom_toBottomOf  ="@id/userImg"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            
            <TextView
                    android:id                              ="@+id/nameLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:textSize                        ="16sp"
                    android:text                            ="@string/name_colons"
                    app:layout_constraintStart_toStartOf    ="@id/user_login_layout"
                    app:layout_constraintTop_toBottomOf     ="@id/user_login_layout"/>
            
            <TextView
                    android:id                              ="@+id/nameTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    android:layout_marginEnd                ="16dp"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/nameLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/emailLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/email_colons"
                    app:layout_constraintStart_toStartOf    ="@id/nameLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/nameLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/emailTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/emailLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/companyLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/company_colons"
                    app:layout_constraintStart_toStartOf    ="@id/emailLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/emailLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/companyTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/companyLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/followersLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/followers_colons"
                    app:layout_constraintStart_toStartOf    ="@id/companyLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/companyLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/followersTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/followersLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/blogLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/blog_colons"
                    app:layout_constraintStart_toStartOf    ="@id/followersLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/followersLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/blogTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/blogLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/locationLabelTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginTop                ="20dp"
                    android:text                            ="@string/location_colons"
                    app:layout_constraintStart_toStartOf    ="@id/blogLabelTxt"
                    app:layout_constraintTop_toBottomOf     ="@id/blogLabelTxt"/>
            
            <TextView
                    android:id                              ="@+id/locationTxt"
                    android:layout_width                    ="wrap_content"
                    android:layout_height                   ="wrap_content"
                    android:layout_marginEnd                ="16dp"
                    android:textSize                        ="16sp"
                    android:textStyle                       ="bold"
                    app:layout_constraintEnd_toEndOf        ="parent"
                    app:layout_constraintTop_toTopOf        ="@id/locationLabelTxt"/>
        
        </androidx.constraintlayout.widget.ConstraintLayout>
    
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>